--- a/CLIENT_REACT/play-share-app/public/index.html
+++ b/CLIENT_REACT/play-share-app/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />    
+    <link rel="icon" href="%PUBLIC_URL%/original_files/favicon.ico" />    
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Social Media Front End"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"> 
-    <link rel="stylesheet" href="%PUBLIC_URL%/login/login.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/login.css">
 
     <title>React App</title>
   </head>
@@ -18,8 +18,6 @@
     <div id="root"></div>
   </body>
 
- <footer>
-    <script src="%PUBLIC_URL%/login/login.js"> </script>
- </footer>
+ <footer> </footer>
 
 </html>
