--- a/CLIENT_REACT/play-share-app/public/index.html
+++ b/CLIENT_REACT/play-share-app/public/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"> 
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/login.css"> -->
+    <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+
 
 
     <title>React App</title>
